lended list in profile

--- a/frontend/src/components/user/Profile/Profile.css
+++ b/frontend/src/components/user/Profile/Profile.css
@@ -33,3 +33,9 @@
     /* margin-left: 100px; */
     margin-right: -50px;
 }
+.profile__books{
+    padding: 30px;
+    background-color: #ffffff;
+    border-radius: 20px;
+    margin-top: 10px;
+}
